--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -68,12 +68,7 @@ footer {
   max-width: 100%;
 }
 
-.image-author
-{
-  @media #{$medium-and-down} {
-    max-width: 50%;
-  }
-}
+
 .list-horizontal
 {
   text-align: center;
